EXTRA/hello.4/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, LINECOMMENT=3, NEWLINE=4, IF=5, THEN=6, ELSE=7, ENDIF=8, 
		PLUS=9, MINUS=10, MULT=11, DIV=12, EQUALS=13, GT=14, LT=15, GE=16, LE=17, 
		ULINE=18, DOT=19, GETS=20, LABEL=21, INT=22, FLOAT=23, HEX=24, RES_PARM=25, 
		VARIABLE=26;
	public static final int
		RULE_prog = 0, RULE_statements = 1, RULE_statement = 2, RULE_if_statement = 3, 
		RULE_assignment = 4, RULE_expr = 5, RULE_rel_expr = 6, RULE_eq_expr = 7, 
		RULE_add_expr = 8, RULE_mult_expr = 9, RULE_unary_expr = 10, RULE_term = 11, 
		RULE_identifier = 12, RULE_number = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statements", "statement", "if_statement", "assignment", "expr", 
			"rel_expr", "eq_expr", "add_expr", "mult_expr", "unary_expr", "term", 
			"identifier", "number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'+'", "'-'", "'*'", 
			"'/'", "'='", "'>'", "'<'", "'>='", "'<='", "'_'", "'.'", "':='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "LINECOMMENT", "NEWLINE", "IF", "THEN", "ELSE", 
			"ENDIF", "PLUS", "MINUS", "MULT", "DIV", "EQUALS", "GT", "LT", "GE", 
			"LE", "ULINE", "DOT", "GETS", "LABEL", "INT", "FLOAT", "HEX", "RES_PARM", 
			"VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StatementsContext statements;
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HelloParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((ProgContext)_localctx).statements = statements("");
			setState(29);
			match(EOF);
			System.out.println(((ProgContext)_localctx).statements.str);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public String indent;
		public String str;
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, String indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(String indent) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), indent);
		enterRule(_localctx, 2, RULE_statements);
		((StatementsContext)_localctx).str =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << LABEL) | (1L << RES_PARM) | (1L << VARIABLE))) != 0)) {
				{
				{
				setState(32);
				((StatementsContext)_localctx).statement = statement(indent);
				_localctx.str += indent + ((StatementsContext)_localctx).statement.str + "\n";
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public String indent;
		public String str;
		public If_statementContext if_statement;
		public AssignmentContext assignment;
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, String indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement(String indent) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), indent);
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				((StatementContext)_localctx).if_statement = if_statement(indent);
				((StatementContext)_localctx).str =  ((StatementContext)_localctx).if_statement.str;
				}
				break;
			case LABEL:
			case RES_PARM:
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				((StatementContext)_localctx).assignment = assignment();
				((StatementContext)_localctx).str =  ((StatementContext)_localctx).assignment.str;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public String indent;
		public String str;
		public ExprContext expr;
		public StatementsContext s1;
		public StatementsContext s2;
		public TerminalNode IF() { return getToken(HelloParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode THEN() { return getToken(HelloParser.THEN, 0); }
		public TerminalNode ENDIF() { return getToken(HelloParser.ENDIF, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(HelloParser.ELSE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public If_statementContext(ParserRuleContext parent, int invokingState, String indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitIf_statement(this);
		}
	}

	public final If_statementContext if_statement(String indent) throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState(), indent);
		enterRule(_localctx, 6, RULE_if_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(IF);
			setState(49);
			((If_statementContext)_localctx).expr = expr();
			setState(50);
			match(THEN);
			setState(51);
			((If_statementContext)_localctx).s1 = statements(indent + "  ");
			((If_statementContext)_localctx).str =  "if (" + ((If_statementContext)_localctx).expr.str + ")\n" + indent + "{\n" + ((If_statementContext)_localctx).s1.str;
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(53);
				match(ELSE);
				setState(54);
				((If_statementContext)_localctx).s2 = statements(indent + "  ");
				_localctx.str += indent + "}\n" + indent + "else\n" + indent + "{\n" + ((If_statementContext)_localctx).s2.str;
				}
			}

			setState(59);
			match(ENDIF);
			_localctx.str += indent + "}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public String str;
		public IdentifierContext identifier;
		public ExprContext expr;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode GETS() { return getToken(HelloParser.GETS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((AssignmentContext)_localctx).identifier = identifier();
			setState(63);
			match(GETS);
			setState(64);
			((AssignmentContext)_localctx).expr = expr();
			((AssignmentContext)_localctx).str =  ((AssignmentContext)_localctx).identifier.str + " = " + ((AssignmentContext)_localctx).expr.str + ";";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String str;
		public Rel_exprContext rel_expr;
		public Rel_exprContext rel_expr() {
			return getRuleContext(Rel_exprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			((ExprContext)_localctx).rel_expr = rel_expr();
			((ExprContext)_localctx).str =  ((ExprContext)_localctx).rel_expr.str;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rel_exprContext extends ParserRuleContext {
		public String str;
		public Eq_exprContext e1;
		public Eq_exprContext e2;
		public List<Eq_exprContext> eq_expr() {
			return getRuleContexts(Eq_exprContext.class);
		}
		public Eq_exprContext eq_expr(int i) {
			return getRuleContext(Eq_exprContext.class,i);
		}
		public TerminalNode LT() { return getToken(HelloParser.LT, 0); }
		public TerminalNode GT() { return getToken(HelloParser.GT, 0); }
		public TerminalNode LE() { return getToken(HelloParser.LE, 0); }
		public TerminalNode GE() { return getToken(HelloParser.GE, 0); }
		public Rel_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rel_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterRel_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitRel_expr(this);
		}
	}

	public final Rel_exprContext rel_expr() throws RecognitionException {
		Rel_exprContext _localctx = new Rel_exprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rel_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((Rel_exprContext)_localctx).e1 = eq_expr();
			((Rel_exprContext)_localctx).str =  ((Rel_exprContext)_localctx).e1.str;
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LT:
				{
				setState(72);
				match(LT);
				setState(73);
				((Rel_exprContext)_localctx).e2 = eq_expr();
				_localctx.str += " < "  + ((Rel_exprContext)_localctx).e2.str;
				}
				break;
			case GT:
				{
				setState(76);
				match(GT);
				setState(77);
				((Rel_exprContext)_localctx).e2 = eq_expr();
				_localctx.str += " > "  + ((Rel_exprContext)_localctx).e2.str;
				}
				break;
			case LE:
				{
				setState(80);
				match(LE);
				setState(81);
				((Rel_exprContext)_localctx).e2 = eq_expr();
				_localctx.str += " <= " + ((Rel_exprContext)_localctx).e2.str;
				}
				break;
			case GE:
				{
				setState(84);
				match(GE);
				setState(85);
				((Rel_exprContext)_localctx).e2 = eq_expr();
				_localctx.str += " >= " + ((Rel_exprContext)_localctx).e2.str;
				}
				break;
			case EOF:
			case IF:
			case THEN:
			case ELSE:
			case ENDIF:
			case LABEL:
			case RES_PARM:
			case VARIABLE:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eq_exprContext extends ParserRuleContext {
		public String str;
		public Add_exprContext e1;
		public Add_exprContext e2;
		public List<Add_exprContext> add_expr() {
			return getRuleContexts(Add_exprContext.class);
		}
		public Add_exprContext add_expr(int i) {
			return getRuleContext(Add_exprContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(HelloParser.EQUALS, 0); }
		public Eq_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eq_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterEq_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitEq_expr(this);
		}
	}

	public final Eq_exprContext eq_expr() throws RecognitionException {
		Eq_exprContext _localctx = new Eq_exprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eq_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((Eq_exprContext)_localctx).e1 = add_expr();
			((Eq_exprContext)_localctx).str =  ((Eq_exprContext)_localctx).e1.str;
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(92);
				match(EQUALS);
				setState(93);
				((Eq_exprContext)_localctx).e2 = add_expr();
				_localctx.str += " == " + ((Eq_exprContext)_localctx).e2.str;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_exprContext extends ParserRuleContext {
		public String str;
		public Mult_exprContext e1;
		public Mult_exprContext e2;
		public List<Mult_exprContext> mult_expr() {
			return getRuleContexts(Mult_exprContext.class);
		}
		public Mult_exprContext mult_expr(int i) {
			return getRuleContext(Mult_exprContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(HelloParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(HelloParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(HelloParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(HelloParser.MINUS, i);
		}
		public Add_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAdd_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAdd_expr(this);
		}
	}

	public final Add_exprContext add_expr() throws RecognitionException {
		Add_exprContext _localctx = new Add_exprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_add_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((Add_exprContext)_localctx).e1 = mult_expr();
			((Add_exprContext)_localctx).str =  ((Add_exprContext)_localctx).e1.str;
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(100);
					match(PLUS);
					setState(101);
					((Add_exprContext)_localctx).e2 = mult_expr();
					_localctx.str += " + " + ((Add_exprContext)_localctx).e2.str;
					}
					break;
				case MINUS:
					{
					setState(104);
					match(MINUS);
					setState(105);
					((Add_exprContext)_localctx).e2 = mult_expr();
					_localctx.str += " - " + ((Add_exprContext)_localctx).e2.str;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mult_exprContext extends ParserRuleContext {
		public String str;
		public Unary_exprContext e1;
		public Unary_exprContext e2;
		public List<Unary_exprContext> unary_expr() {
			return getRuleContexts(Unary_exprContext.class);
		}
		public Unary_exprContext unary_expr(int i) {
			return getRuleContext(Unary_exprContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(HelloParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(HelloParser.MULT, i);
		}
		public List<TerminalNode> DIV() { return getTokens(HelloParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(HelloParser.DIV, i);
		}
		public Mult_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mult_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterMult_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitMult_expr(this);
		}
	}

	public final Mult_exprContext mult_expr() throws RecognitionException {
		Mult_exprContext _localctx = new Mult_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mult_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			((Mult_exprContext)_localctx).e1 = unary_expr();
			((Mult_exprContext)_localctx).str =  ((Mult_exprContext)_localctx).e1.str;
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULT || _la==DIV) {
				{
				setState(123);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MULT:
					{
					setState(115);
					match(MULT);
					setState(116);
					((Mult_exprContext)_localctx).e2 = unary_expr();
					_localctx.str += " * " + ((Mult_exprContext)_localctx).e2.str;
					}
					break;
				case DIV:
					{
					setState(119);
					match(DIV);
					setState(120);
					((Mult_exprContext)_localctx).e2 = unary_expr();
					_localctx.str += " / " + ((Mult_exprContext)_localctx).e2.str;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_exprContext extends ParserRuleContext {
		public String str;
		public TermContext term;
		public TerminalNode MINUS() { return getToken(HelloParser.MINUS, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Unary_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterUnary_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitUnary_expr(this);
		}
	}

	public final Unary_exprContext unary_expr() throws RecognitionException {
		Unary_exprContext _localctx = new Unary_exprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unary_expr);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(MINUS);
				setState(129);
				((Unary_exprContext)_localctx).term = term();
				((Unary_exprContext)_localctx).str =  "-" + ((Unary_exprContext)_localctx).term.str;
				}
				break;
			case LABEL:
			case INT:
			case FLOAT:
			case HEX:
			case RES_PARM:
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				((Unary_exprContext)_localctx).term = term();
				((Unary_exprContext)_localctx).str =  ((Unary_exprContext)_localctx).term.str;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public String str;
		public IdentifierContext identifier;
		public NumberContext number;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LABEL:
			case RES_PARM:
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				((TermContext)_localctx).identifier = identifier();
				((TermContext)_localctx).str =  ((TermContext)_localctx).identifier.str;
				}
				break;
			case INT:
			case FLOAT:
			case HEX:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				((TermContext)_localctx).number = number();
				((TermContext)_localctx).str =  (((TermContext)_localctx).number!=null?_input.getText(((TermContext)_localctx).number.start,((TermContext)_localctx).number.stop):null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
